<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wgs_to_utm_mgrs</name>
  <version>1.0.0</version>
  <description>The wgs_to_utm package</description>
  <maintainer email="hezhenhao@whut.edu.cn">Apex.AI, Inc.</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>lanelet2_projection</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>msg_interfaces</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
