<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_state</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1442304212@qq.com">parking</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_system_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_ad_api_specs</depend>
  <depend>tier4_system_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
